# satcon

./: CMakeLists.txt  main.cpp
capturewindow/: CMakeLists.txt  capturewindow.cpp  capturewindow.h  capturewindow.ui
libsgp4/: CMakeLists.txt  DateTime.h  README.md  Tle.h
mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
